[tool.poetry]
name = "scrapping_sites_empregos_to_csv"
version = "1.0"
description = "Busca por empregos e coloca para csv"
authors = ["Victor Motta <victor.mottag@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
